# forestanza.qt

./: CMakeLists.txt  Makefile  README.md
doc/: TODO.nou
scripts/: setup-develop
src/: hello.cpp
